--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Amaranth:wght@400;700&family=Source+Sans+Pro:wght@200&display=swap"
+    rel="stylesheet">
   <script src="https://kit.fontawesome.com/d78de1b3fa.js" crossorigin="anonymous"></script>
 
   <!--
